restyling stop button to be more legible

--- a/static/scss/_pages.scss
+++ b/static/scss/_pages.scss
@@ -87,8 +87,8 @@ iframe {
       position: relative;
       width: 78%;
       button.button-style.stop {
-        background: $green-light;
-        color: $plum;
+        background: $green-dark;
+        color: $beige;
         font-size: 14px;
         padding: 3px;
         position: absolute;
