--- a/static/style.css
+++ b/static/style.css
@@ -378,6 +378,7 @@ input[type=range]:focus::-ms-fill-upper {
       display: inline-block;
       font-size: 1.2rem;
       padding: 0;
+      text-align: right;
       width: 45%; }
   .header nav a {
     color: #2E243F;
@@ -451,8 +452,8 @@ iframe {
       position: relative;
       width: 78%; }
       #front .content .main-section button.button-style.stop {
-        background: #4D8061;
-        color: #2E243F;
+        background: #1E3A29;
+        color: #F5EFEB;
         font-size: 14px;
         padding: 3px;
         position: absolute;
